# MBI

./: README.md
Debug/seq/: 6  7  8  not_to_run
src/: CMakeLists.txt  main.cpp
src/src/: CMakeLists.txt  calc_alignment.cpp  calc_alignment.cu  calc_alignment.h  main.cpp  sample.cu
src/test/: CMakeLists.txt
